# checkers

./: .gitignore  CMakeLists.txt
include/: board.hpp  checkers.hpp  piece.hpp  player.hpp  square.hpp
src/: board.cpp  checkers.cpp  main.cpp  piece.cpp  square.cpp
